src/main/java/com/example/formservice/handler/error/exception/ValidationException.java
package com.example.formservice.handler.error.exception;

public class ValidationException extends RuntimeException {
    public ValidationException(String message) {
        super(message);
    }
}
